iframe-frontend/src/components/Offer/styles.module.css
.container {
    padding: 16px;
    display: flex;
    gap: 16px;
    flex-direction: column;
    min-height: calc(100vh - 32px);
}

.subtitle_container {
    display: flex;
    align-items: end;
    gap: 10px;
    min-height: 42px;
}

.subtitle {
    font-size: var(--details-title-f-s);
    font-weight: var(--details-title-f-w);
    color: var(--details-title-f-c);
    margin: 0;
    line-height: 24px;
}

.details_txt {
    font-size: var(--details-subtitle-f-s);
    font-weight: var(--details-subtitle-f-w);
    color: var(--details-subtitle-f-c);
    line-height: 24px;
    white-space: nowrap;
}

.cashback_amount {
    font-weight: var(--details-amount-f-w);
    color: var(--details-amount-f-c);
}

.action_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    width: 100%;
}

.btn {
    background: var(--primary-btn-bg);
    color: var(--primary-btn-f-c);
    border-radius: var(--primary-btn-radius);
    border-width: var(--primary-btn-border-w);
    border-color: var(--primary-btn-border-c);
    font-size: var(--primary-btn-f-s);
    font-weight: var(--primary-btn-f-w);
    border-style: solid;
    cursor: pointer;
    width: 100%;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.xMark:hover {
    transform: scale(1.1);
}

.details {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: calc(206px - 32px);
    gap: 16px;
    padding: 16px;
    background: var(--details-bg);
    border-radius: var(--details-radius);
    border-width: var(--details-border-w);
    border-style: solid;
    border-color: var(--details-border-c);
    user-select: none;
}

.top_container {
    display: flex;
    align-self: flex-start;
    justify-content: center;
    gap: 7px;
}

.wallet_container {
    display: flex;
    align-self: flex-start;
    justify-content: center;
    align-items: center;
    height: 24px;
    background: var(--wallet-bg);
    padding: 0 12px;
    border-radius: var(--wallet-radius);
}

.wallet {
    font-size: var(--wallet-f-s);
    font-weight: var(--wallet-f-w);
    color: var(--wallet-f-c);
    border-width: var(--wallet-border-w);
    border-style: solid;
    border-color: var(--wallet-border-c);
}

.connect_btn {
    background: var(--wallet-bg);
    cursor: pointer;
}

.btns_container {
    display: flex;
    gap: 16px;
    width: 100%;
}

.action_btn {
    color: var(--secondary-btn-f-c);
    background: var(--secondary-btn-bg);
    border-width: var(--secondary-btn-border-w);
    border-style: solid;
    border-color: var(--secondary-btn-border-c);
    border-radius: var(--secondary-btn-radius);
    font-size: var(--secondary-btn-f-s);
    font-weight: var(--secondary-btn-f-w);
    width: 100%;
    height: 40px;
    cursor: pointer;
}

.demo_container {
    display: flex;
    align-self: flex-start;
    justify-content: center;
    align-items: center;
    height: 23px;
    background: var(--wallet-bg);
    padding: 0 12px;
    border-radius: var(--wallet-radius);
}

.demo_label {
    font-size: var(--wallet-f-s);
    font-weight: var(--wallet-f-w);
    color: var(--wallet-f-c);
    border-width: var(--wallet-border-w);
    border-style: solid;
    border-color: var(--wallet-border-c);
}

.clarify {
    text-align: center;
    text-wrap: nowrap;
    font-size: var(--clarify-f-s, 14px);
    font-weight: var(--clarify-f-w, 400);
    color: var(--clarify-f-c, var(--details-subtitle-f-c));
    line-height: 22px;
    user-select: none;
}

.agree {
    text-align: center;
    font-size: var(--agree-f-s, 14px);
    font-weight: var(--agree-f-w, 400);
    color: var(--agree-f-c);
    line-height: 22px;
    margin-top: auto;
    user-select: none;
}

.terms {
    color: var(--agree-link-f-c);
    text-decoration: underline;
    text-underline-offset: 2px;
    cursor: pointer;
}

